--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,7 +29,7 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
-    namespace "com.example.chaserungame"
+    namespace "com.example.chaseRunGame"
     compileSdkVersion 34
     ndkVersion flutter.ndkVersion
 
@@ -48,7 +48,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.chaserungame"
+        applicationId "com.example.chaseRunGame"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion 24
@@ -57,23 +57,23 @@ android {
         versionName flutterVersionName
     }
 
-    signingConfigs {
-        if (System.getenv("ANDROID_KEYSTORE_PATH")) {
-            release {
-                storeFile file(System.getenv("ANDROID_KEYSTORE_PATH"))
-                keyAlias System.getenv("ANDROID_KEYSTORE_ALIAS")
-                keyPassword System.getenv("ANDROID_KEYSTORE_PRIVATE_KEY_PASSWORD")
-                storePassword System.getenv("ANDROID_KEYSTORE_PASSWORD")
-            }
-        } else {
-            release {
-                keyAlias keystoreProperties['keyAlias']
-                keyPassword keystoreProperties['keyPassword']
-                storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
-                storePassword keystoreProperties['storePassword']
-            }
-        }
-    }
+    // signingConfigs {
+    //     if (System.getenv("ANDROID_KEYSTORE_PATH")) {
+    //         release {
+    //             storeFile file(System.getenv("ANDROID_KEYSTORE_PATH"))
+    //             keyAlias System.getenv("ANDROID_KEYSTORE_ALIAS")
+    //             keyPassword System.getenv("ANDROID_KEYSTORE_PRIVATE_KEY_PASSWORD")
+    //             storePassword System.getenv("ANDROID_KEYSTORE_PASSWORD")
+    //         }
+    //     } else {
+    //         release {
+    //             keyAlias keystoreProperties['keyAlias']
+    //             keyPassword keystoreProperties['keyPassword']
+    //             storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+    //             storePassword keystoreProperties['storePassword']
+    //         }
+    //     }
+    // }
 
     flavorDimensions "default"
 
